<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zumi_ros</name>
  <version>2.1.0</version>
  <description>
    This package provides zumi communication node 
  </description>
  <author email="test@test.com">test </author>
  <author email="test@test.com">test</author>
  <maintainer email="test@test.com">test </maintainer>
  <license>Apache 2.0</license>
  <url type="website"></url>
  <url type="emanual"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
